add new File alertComponent and ViewChildComponent

--- a/AppEcommerece/src/app/app.component.html
+++ b/AppEcommerece/src/app/app.component.html
@@ -1,11 +1,8 @@
-<app-headers></app-headers>
-
-
-<!--Wrapper-->
+<!-- <app-headers></app-headers>
 <div class="wrapper">
-
 <router-outlet></router-outlet>
-
 </div>
+<app-footers></app-footers> -->
 
-<app-footers></app-footers>
+
+<app-view-child-component></app-view-child-component>
